--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
