--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
   "rewrites": [
-    { "source": "/api/locations", "destination": "/api/locations" },
-    { "source": "/api/notes", "destination": "/api/notes" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
