--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/noto-nastaliq-urdu": "^5.2.8",
     "@fortawesome/fontawesome-free": "^7.2.0",
     "@google/genai": "^1.41.0",
+    "@vercel/analytics": "^1.6.1",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
